--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "url": "git://github.com/rishy/angular-wizard.git"
   },
   "dependencies": {
-    "angular": "*"
+    "angular": "1.2.10"
   },
   "ignore": [
     "node_modules",
